<resources>
    <string name="app_name">ProyectoFinalMobiles</string>
    <string name="facil">facil</string>
    <string name="dificil">Dificil</string>
    <string name="apodo">apodo</string>
    <string name="puntos">puntos</string>
    <string name="inicio_de_sesion">inicio de sesion</string>
    <string name="dificultad">Dificultad</string>
    <string name="sexo">sexo</string>
    <string name="guardar">Guardar</string>
    <string name="volver">volver</string>
    <string name="Nombre">nombre</string>
    <string name="contrase_a">contraseña</string>
    <string name="llena_los_campos_y_resgistrate">llena los campos y resgistrate</string>
    <string name="llena_los_campos_y_registrate">Llena los campos y registrate</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a2">Contraseña</string>
</resources>